fixed nav spacing

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -46,7 +46,25 @@ li {
 
 .bar {
 	color: #4b6888;
-	padding: 11px 4px 10px 4px;
+	padding: 11px 3px 10px 3px;
+	margin: 0 -2px 0 -2px;
+	font-weight: 600;
+	font-size: 14px;
+  font-family: "Times New Roman", Times, Serif;
+}
+
+.first-bar {
+	color: #4b6888;
+	padding: 11px 4px 10px 3px;
+	margin: 0 -2px 0 -2px;
+	font-weight: 600;
+	font-size: 14px;
+  font-family: "Times New Roman", Times, Serif;
+}
+
+.last-bar {
+	color: #4b6888;
+	padding: 11px 3px 10px 4px;
 	margin: 0 -2px 0 -2px;
 	font-weight: 600;
 	font-size: 14px;
